# School

./: .gitignore  find_vcvars.ps1
Graduate-School/: RISC-MIPS-simulator.go  RISC-MIPS-simulator.txt  Untitled Diagram.drawio
Graduate-School/CIS657/: Clingan_Midterm.odt  UPDATED-CIS657-ResearchPaper.tex  test.txt
Graduate-School/CIS657/FINAL/: FINAL.md  ISSUES.md  OUTPUT-XINUENVERROR.md  Output  README  README.md  TECHDOC.md  TheSevenRules.md  TheSixRules.md  build_final.sh  compilation.txt  compilation_summary.txt  compile_pstarv_Version2.ps1  file_list.json  generate_xinu_includes.ps1  get-file-list.ps1  go.ps1  go.sh  initialize_system.c  ipc_protocol.h  pstarv_test.c  xinu.h  xinu_core.c  xinu_host.c  xinu_includes.h  xinu_init.c  xinu_sim_declarations.h  xinu_simulation.c  xinu_simulation_standalone.c  xinu_simulation_win.c  xinu_stddefs.h
Graduate-School/CIS657/MIDTERM/: CHANGESUMMARY_Version5.md  test.txt
Graduate-School/CIS657/compile/: makefile.c  version
Graduate-School/CIS657/config/: Makefile
Graduate-School/CIS657/include/: prototypes.h  semaphore.h
Graduate-School/CIS657/shell/: shell.c  xsh-create.c  xsh-wait.c  (+8 more)
Graduate-School/CSE687-MapReduce/: CHANGELOG.md  CMakeLists.txt  ERROR_Handler.h  FileHandler.h  Logger.h  Mapper.h  Mapper_DLL_so.h  README.md  Reducer.h  TEST_BASH_MapReduce.sh  TEST_Integration.cpp  TEST_Mapper_DLL_so.cpp  TEST_PowerShell_MapReduce.ps1  TEST_Test_Framework.h  TEST_mapper.cpp  TEST_performance.cpp  go.ps1  go.sh  main.cpp
Senior-Project/: ALU.cpp  ALU.hex  ControlStore.cpp  ControlStore.ods  Decimal7SegDecoder.cpp
(+192 files in other folders)
